--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,6 @@
     "angular-resource": "1.5.8",
     "angular-cookies": "1.5.8",
     "angularjs-slider": "~0.1.21",
-    "appverse-web-html5-core": "~0.8.0",
     "highlightjs": "~8.6.0",
     "IndexedDBShim": "~2.2.1",
     "selectize": "~0.12.1",
@@ -28,15 +27,16 @@
     "ngclipboard": "~1.1.0",
     "es5-shim": "^4.5.5",
     "json3": "^3.3.2",
-    "appverse-bootstrap-sass-theme": "0.0.x"
+    "appverse-bootstrap-sass-theme": "0.0.x",
+    "appverse-web-html5-security": "^1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
   },
   "resolutions": {
     "angular": "~1.5.8",
-    "angular-ui-router": "~0.2.15",
     "angular-animate": "~1.5.8",
-    "angular-sanitize": "~1.5.8"
+    "angular-sanitize": "~1.5.8",
+    "angular-ui-router": "~0.3.1"
   }
 }
