--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
-  "name": "showcase",
-  "version": "0.0.1",
-  "repository": {
-    "type": "git",
-    "url": "user/repo"
-  },
-  "devDependencies": {
-    "chai": "^3.2.0",
-    "chai-as-promised": "^5.1.0",
-    "cucumber": "^0.5.2",
-    "grunt": "0.4.5",
-    "grunt-autoprefixer": "3.0.0",
-    "grunt-concurrent": "1.0.0",
-    "grunt-connect-proxy": "0.1.10",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-coffee": "0.13.0",
-    "grunt-contrib-concat": "0.5.1",
-    "grunt-contrib-connect": "0.10.1",
-    "grunt-contrib-copy": "0.8.0",
-    "grunt-contrib-cssmin": "0.12.2",
-    "grunt-contrib-htmlmin": "0.4.0",
-    "grunt-contrib-jshint": "0.11.2",
-    "grunt-contrib-uglify": "0.9.1",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-istanbul": "^0.6.1",
-    "grunt-karma": "0.10.1",
-    "grunt-license-report": "0.0.8",
-    "grunt-ng-annotate": "0.10.0",
-    "grunt-open": "0.2.3",
-    "grunt-rev": "0.1.0",
-    "grunt-sass": "^1.1.0",
-    "grunt-shell": "^1.1.2",
-    "grunt-usemin": "3.0.0",
-    "istanbul": "^0.3.17",
-    "jasmine-core": "2.2.0",
-    "jasmine-reporters": "^2.0.7",
-    "karma": "0.12.31",
-    "karma-chrome-launcher": "0.1.8",
-    "karma-coverage": "0.3.1",
-    "karma-jasmine": "0.3.5",
-    "karma-junit-reporter": "^0.2.2",
-    "karma-phantomjs-launcher": "0.1.4",
-    "load-grunt-configs": "0.4.3",
-    "load-grunt-tasks": "3.1.0",
-    "lodash": "3.7.0",
-    "phantomjs": "^1.9.18",
-    "protractor": "^2.5.1",
-    "q": "^1.4.1",
-    "time-grunt": "1.1.1"
-  },
-  "engines": {
-    "node": ">=0.12.0",
-    "npm": ">=1.4.5"
-  },
-  "scripts": {
-    "postinstall": "node node_modules/protractor/bin/webdriver-manager update --ie",
-    "test": "grunt test"
-  }
+    "name": "showcase",
+    "version": "0.0.1",
+    "repository": {
+        "type": "git",
+        "url": "user/repo"
+    },
+    "devDependencies": {
+        "chai": "^3.2.0",
+        "chai-as-promised": "^5.1.0",
+        "cucumber": "^0.5.2",
+        "grunt": "0.4.5",
+        "grunt-autoprefixer": "3.0.0",
+        "grunt-concurrent": "1.0.0",
+        "grunt-connect-proxy": "0.1.10",
+        "grunt-contrib-clean": "0.6.0",
+        "grunt-contrib-coffee": "0.13.0",
+        "grunt-contrib-concat": "0.5.1",
+        "grunt-contrib-connect": "0.10.1",
+        "grunt-contrib-copy": "0.8.0",
+        "grunt-contrib-cssmin": "0.12.2",
+        "grunt-contrib-htmlmin": "0.4.0",
+        "grunt-contrib-jshint": "0.11.2",
+        "grunt-contrib-uglify": "0.9.1",
+        "grunt-contrib-watch": "0.6.1",
+        "grunt-istanbul": "^0.6.1",
+        "grunt-karma": "0.12.2",
+        "grunt-license-report": "0.0.8",
+        "grunt-ng-annotate": "0.10.0",
+        "grunt-open": "0.2.3",
+        "grunt-rev": "0.1.0",
+        "grunt-sass": "^1.1.0",
+        "grunt-shell": "^1.1.2",
+        "grunt-usemin": "3.0.0",
+        "istanbul": "^0.3.17",
+        "jasmine-core": "2.2.0",
+        "jasmine-reporters": "^2.0.7",
+        "karma": "^0.13.22",
+        "karma-chrome-launcher": "0.1.8",
+        "karma-coverage": "0.3.1",
+        "karma-jasmine": "0.3.5",
+        "karma-junit-reporter": "^0.2.2",
+        "karma-phantomjs-launcher": "^1.0.0",
+        "load-grunt-configs": "0.4.3",
+        "load-grunt-tasks": "3.1.0",
+        "lodash": "3.7.0",
+        "phantomjs-prebuilt": "^2.1.0",
+        "protractor": "^2.5.1",
+        "q": "^1.4.1",
+        "time-grunt": "1.1.1"
+    },
+    "engines": {
+        "node": ">=0.12.0",
+        "npm": ">=1.4.5"
+    },
+    "scripts": {
+        "postinstall": "node node_modules/protractor/bin/webdriver-manager update --ie",
+        "test": "grunt test"
+    }
 }
